# smart-fork

./: .gitignore  .mcp.json  CONTRIBUTING.md  HOW_IT_WORKS.md  LICENSE  NEW_TOOLS_PHASE3.md  PRD-Smart-Fork-Detection-2026-01-20.md  PROMPT.md  PROMPT2.md  PROMPT3.md  README.md  TESTING_GUIDE_PHASE3.md  activity.md  activity2.md  activity3.md  manual_test_background_indexer.py  manual_test_chunking.py  manual_test_embedding.py  manual_test_fork_detect.py  manual_test_parser.py  manual_test_scoring.py  manual_test_search.py  manual_test_selection_ui.py  manual_test_session_registry.py  manual_test_vector_db.py  plan.md  plan2.md  plan3.md  pyproject.toml  ralph.sh  ralph2.sh  ralph3.sh  ralph_log.txt  ralph_log_2.txt  requirements-dev.txt  requirements.txt  run_integration_tests.py  test_embedding_load.py  test_progress_display.py  test_server_manual.py  (+22 more)
tests/: __init__.py  test_api_server.py  test_background_indexer.py  test_chunking_service.py  test_config_manager.py  test_embedding_cache.py  test_embedding_service.py  test_embedding_service_cache.py  test_fork_detect.py  test_fork_detect_e2e.py  test_fork_generator.py  test_initial_setup.py  test_mcp_integration.py  test_mcp_server.py  test_memory_extractor.py  test_multithreaded_indexing.py  test_multithreaded_unit.py  test_performance.py  test_project_scoped_search.py  test_scoring_service.py  test_search_integration.py  test_search_service.py  test_selection_ui.py  test_session_archive_integration.py  test_session_archive_service.py  test_session_diff_integration.py  test_session_diff_service.py  test_session_parser.py  test_session_preview.py  test_session_registry.py  test_setup.py  test_temporal_filter.py  test_vector_db_service.py
verification/: phase2-task2-findings.md  phase2-task5-findings.md  phase3-multithreaded-indexing.txt  phase3-project-scoped-search.txt  phase3-session-diff-tool.txt  (+2 more)
(+27 files in other folders)
